added tests for lexing/parsing