@@ -4,6 +4,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.BeforeEach;
 import src.lexer.Lexer;
 import src.parser.Parser;
+import src.parser.ast.nodes.statement.declaration.FunctionDeclarationStatement;
 import src.token.TypeRegistry;
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -12,63 +13,71 @@ public class ParserTest {
 
     @BeforeEach
     void setUp() {
+
         // Reset TypeRegistry before each test
         TypeRegistry.reset();
     }
 
     @Test
     void testMinimalVariableDeclaration() {
+
         var source = "int x;";
         var lexer = new Lexer(source);
         var tokens = lexer.tokenize();
         var parser = new Parser(tokens);
-        assertDoesNotThrow(() -> parser.parse());
+        assertDoesNotThrow(parser::parse);
     }
 
     @Test
     void testFunctionDeclarationWithBody() {
+
         var source = "int foo() { return 42; }";
         var lexer = new Lexer(source);
         var tokens = lexer.tokenize();
         var parser = new Parser(tokens);
-        var ast = assertDoesNotThrow(() -> parser.parse());
-        var func = ast.get(0);
+        var ast = assertDoesNotThrow(parser::parse);
+        var func = ast.getFirst();
+
         // Check that function has a non-null body
-        assertTrue(func instanceof src.parser.ast.nodes.statement.declaration.FunctionDeclarationStatement);
+        assertInstanceOf(FunctionDeclarationStatement.class, func);
         var funcDecl = (src.parser.ast.nodes.statement.declaration.FunctionDeclarationStatement) func;
         assertNotNull(funcDecl.getBody());
     }
 
     @Test
     void testClassDeclarationWithMembers() {
+
         var source = "public class MyClass { int field; int method() { return 0; } }";
         var lexer = new Lexer(source);
         var tokens = lexer.tokenize();
         var parser = new Parser(tokens);
-        var ast = assertDoesNotThrow(() -> parser.parse());
+        var ast = assertDoesNotThrow(parser::parse);
         assertEquals(1, ast.size());
     }
 
     @Test
     void testUndefinedVariableThrows() {
+
         var source = "unknownVar + 1;";
         var lexer = new Lexer(source);
         var tokens = lexer.tokenize();
         var parser = new Parser(tokens);
-        assertThrows(Exception.class, () -> parser.parse(), "Should throw ParseException for undefined variable");
+        assertThrows(Exception.class, parser::parse, "Should throw ParseException for undefined variable");
     }
 
     @Test
     void testDuplicateSymbolThrows() {
+
         var source = "int x; int x;";
         var lexer = new Lexer(source);
         var tokens = lexer.tokenize();
         var parser = new Parser(tokens);
-        assertThrows(RuntimeException.class, () -> parser.parse(), "Should throw RuntimeException for duplicate symbol");
+        assertThrows(RuntimeException.class, parser::parse, "Should throw RuntimeException for duplicate symbol");
     }
 
     @Test
     void testTypeRegistryResetBetweenParses() {
+
         // First parse defines a class
         var source1 = "public class First { }";
         var lexer1 = new Lexer(source1);
@@ -81,7 +90,7 @@ public class ParserTest {
         var lexer2 = new Lexer(source2);
         var tokens2 = lexer2.tokenize();
         var parser2 = new Parser(tokens2);
-        assertThrows(Exception.class, () -> parser2.parse(), "Should throw ParseException - class from first parse is not available");
+        assertThrows(Exception.class, parser2::parse, "Should throw ParseException - class from first parse is not available");
     }
 }
 
